--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="condition_icon">Condition Icon</string>
     <string name="loading">Loading&#8230;</string>
     <string name="temperature_output">%1$d&#176;%2$s</string>
+    <string name="pressure_output">%1$d&#176;%2$s</string>
     <string name="update_location">Update Location</string>
     <string name="settings">Settings</string>
     <string name="cache_exception">No Cached Weather Data</string>
