--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="day">Day</string>
     <string name="high">High</string>
     <string name="low">Low</string>
+
+    <string name="before_calculate">"00,00"</string>
+
 </resources>
